--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -10,7 +10,7 @@
     "TcpServer": "localhost",
     "CleanSession": true,
     "ReconnectDelaySecs": 5,
-    "Topic": "projectId/+/devices/+/telemetry",
+    "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
     "QoS": 1,
     "ProcessingTime": 0
   }
