--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,28 @@ services:
       - MqttClientOptions__TcpServer=node1.emqx.io
       - MqttClientOptions__CleanSession=true
       - MqttClientOptions__ReconnectDelaySecs=5
-      - MqttClientOptions__Topic=projectId/+/devices/+/telemetry
+      - MqttClientOptions__Topic=$share/ahi/projectId/+/devices/+/telemetry
+      - MqttClientOptions__Qos=1
+      - MqttClientOptions__ProcessingTime=0
+    networks:
+      - emqx-bridge
+    deploy:
+      resources:
+        limits:
+          cpus: "0.25"
+          memory: "500M"
+
+  mqtt-listener-2:
+    image: emqx-learning/mqtt-listner:latest
+    build:
+      context: .
+      dockerfile: EmqxLearning.MqttListener/Dockerfile
+    environment:
+      - MqttClientOptions__ClientId=mqtt-listener-2
+      - MqttClientOptions__TcpServer=node1.emqx.io
+      - MqttClientOptions__CleanSession=true
+      - MqttClientOptions__ReconnectDelaySecs=5
+      - MqttClientOptions__Topic=$share/ahi/projectId/+/devices/+/telemetry
       - MqttClientOptions__Qos=1
       - MqttClientOptions__ProcessingTime=0
     networks:
