--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -12,6 +12,7 @@
     "ReconnectDelaySecs": 5,
     "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
     "QoS": 1,
-    "ProcessingTime": 0
+    "ProcessingTime": 0,
+    "ProcessingThreads": 100
   }
 }
