--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -11,8 +11,9 @@
     "CleanSession": true,
     "ReconnectDelaySecs": 5,
     "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
-    "QoS": 1,
-    "ProcessingTime": 0,
-    "ProcessingThreads": 100
-  }
+    "QoS": 1
+  },
+  "ReceiveDelay": 0,
+  "ProcessingTime": 100,
+  "ProcessingThreads": 1
 }
