--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -14,6 +14,7 @@
     "QoS": 1
   },
   "ReceiveDelay": 0,
-  "ProcessingTime": 100,
-  "ProcessingThreads": 1
+  "ProcessingTime": 50,
+  "ProcessingThreads": 500,
+  "BackgroundProcessing": false
 }
