--- a/EmqxLearning.MqttListener/EmqxLearning.MqttListener.csproj
+++ b/EmqxLearning.MqttListener/EmqxLearning.MqttListener.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.3.3.952" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 </Project>
