--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -16,5 +16,11 @@
   "ReceiveDelay": 0,
   "ProcessingTime": 50,
   "ProcessingThreads": 500,
-  "BackgroundProcessing": false
+  "BackgroundProcessing": false,
+  "RabbitMqClient": {
+    "HostName": "localhost",
+    "UserName": "admin",
+    "Password": "zaQ@123456!",
+    "RequestedConnectionTimeout": "00:00:30:00"
+  }
 }
