--- a/EmqxLearning.MqttPublisher/Dockerfile
+++ b/EmqxLearning.MqttPublisher/Dockerfile
@@ -1,16 +1,22 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0.420-alpine3.19-arm64v8 AS build-env
+# See https://aka.ms/containerfastmode to understand how Visual Studio uses this
+# Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/runtime:6.0.28-alpine3.19-arm64v8 AS base
 WORKDIR /app
 
-# Copy everything
-COPY . ./
-# Restore as distinct layers
-RUN dotnet restore
-# Build and publish a release
-RUN dotnet publish -c Release -o out
+FROM mcr.microsoft.com/dotnet/sdk:6.0.420-alpine3.19-arm64v8 AS build
+WORKDIR /src
+COPY ["EmqxLearning.MqttPublisher/EmqxLearning.MqttPublisher.csproj", "EmqxLearning.MqttPublisher/"]
+RUN dotnet restore "EmqxLearning.MqttPublisher/EmqxLearning.MqttPublisher.csproj"
+COPY . .
+WORKDIR "/src/EmqxLearning.MqttPublisher"
+RUN dotnet build "EmqxLearning.MqttPublisher.csproj" -c Release -o /app/build
 
-# Build runtime image
-FROM mcr.microsoft.com/dotnet/runtime:6.0.28-alpine3.19-arm64v8
+FROM build AS publish
+RUN dotnet publish "EmqxLearning.MqttPublisher.csproj" -c Release -o /app/publish
+
+FROM base AS final
 WORKDIR /app
-COPY --from=build-env /app/out .
+COPY --from=publish /app/publish .
 
 ENTRYPOINT ["/bin/sh"]
