--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -193,17 +193,43 @@ services:
         condition: service_healthy
 
   # RabbitMQ consumers
-  rabbitmq-consumer-1:
-    image: emqx-learning/rabbitmq-consumer:latest
-    # logging:
-    #   driver: none
+  # rabbitmq-consumer-1:
+  #   image: emqx-learning/rabbitmq-consumer:latest
+  #   # logging:
+  #   #   driver: none
+  #   build:
+  #     context: .
+  #     dockerfile: EmqxLearning.RabbitMqConsumer/Dockerfile
+  #   environment:
+  #     - Logging__LogLevel__Default=Error
+  #     - ProcessingTime=0
+  #     - RabbitMqClient__HostName=rabbitmq1
+  #   networks:
+  #     - emqx-bridge
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         cpus: "1"
+  #         memory: "250M"
+  #   depends_on:
+  #     rabbitmq1:
+  #       condition: service_healthy
+
+  rabbitmq-function-1:
+    image: emqx-learning/rabbitmq-function:latest
     build:
       context: .
-      dockerfile: EmqxLearning.RabbitMqConsumer/Dockerfile
+      dockerfile: EmqxLearning.RabbitMqFunction/Dockerfile
     environment:
-      - Logging__LogLevel__Default=Error
-      - ProcessingTime=0
-      - RabbitMqClient__HostName=rabbitmq1
+      AzureWebJobsStorage: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;"
+      FUNCTIONS_WORKER_RUNTIME: "dotnet"
+      AzureServiceBus__Host: "rabbitmq1"
+      AzureServiceBus__KeyName: "admin"
+      AzureServiceBus__SharedAccessKey: "zaQ@123456!"
+      RabbitMQ: "amqp://admin:zaQ%40123456!@rabbitmq1:5672"
+      DataFolder: "/var/device/data"
+      AzureFunctionsJobHost__logging__LogLevel__Default: "Error"
+      ProcessingTime: 0
     networks:
       - emqx-bridge
     deploy:
@@ -295,6 +321,16 @@ services:
       interval: 30s
       timeout: 30s
       retries: 10
+
+  # Azure services
+  azurite:
+    image: "mcr.microsoft.com/azure-storage/azurite"
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+      - "10002:10002"
+    networks:
+      - emqx-bridge
 
 networks:
   emqx-bridge:
