--- a/deployment/rabbitmq/rabbitmq.conf
+++ b/deployment/rabbitmq/rabbitmq.conf
@@ -1,2 +1,3 @@
 management.load_definitions = /etc/rabbitmq/definitions.json
-vm_memory_high_watermark.relative = 0.8
+# vm_memory_high_watermark.relative = 0.8
+vm_memory_high_watermark.absolute = 1024MiB
