--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -321,6 +321,10 @@ services:
       interval: 30s
       timeout: 30s
       retries: 10
+    deploy:
+      resources:
+        limits:
+          memory: "516M"
 
   # Azure services
   azurite:
