--- a/EmqxLearning.RabbitMqConsumer/EmqxLearning.RabbitMqConsumer.csproj
+++ b/EmqxLearning.RabbitMqConsumer/EmqxLearning.RabbitMqConsumer.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+    <PackageReference Include="Npgsql" Version="8.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
