--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,17 @@ services:
       context: .
       dockerfile: EmqxLearning.MqttListener/Dockerfile
     environment:
-      - Logging__LogLevel__Default=Error
-      - MqttClientOptions__TcpServer=node1.emqx.io
-      - MqttClientOptions__CleanSession=true
-      - MqttClientOptions__ReconnectDelaySecs=5
-      - MqttClientOptions__Topic=$$share/ahi/projectId/+/devices/+/telemetry
-      - MqttClientOptions__Qos=1
-      - ReceiveDelay=3
-      - ProcessingTime=50
-      - ProcessingThreads=20
-      - BackgroundProcessing=true
-      - RabbitMqClient__HostName=rabbitmq1
+      Logging__LogLevel__Default: Error
+      MqttClientOptions__TcpServer: node1.emqx.io
+      MqttClientOptions__CleanSession: true
+      MqttClientOptions__ReconnectDelaySecs: 5
+      MqttClientOptions__Topic: $$share/ahi/projectId/+/devices/+/telemetry
+      MqttClientOptions__Qos: 1
+      ReceiveDelay: 3
+      ProcessingTime: 50
+      ProcessingThreads: 20
+      BackgroundProcessing: true
+      RabbitMqClient__HostName: rabbitmq1
     networks:
       - emqx-bridge
     deploy:
@@ -57,44 +57,18 @@ services:
         condition: service_healthy
 
   # RabbitMQ consumers
-  # rabbitmq-consumer-1:
-  #   image: emqx-learning/rabbitmq-consumer:latest
-  #   # logging:
-  #   #   driver: none
-  #   build:
-  #     context: .
-  #     dockerfile: EmqxLearning.RabbitMqConsumer/Dockerfile
-  #   environment:
-  #     - Logging__LogLevel__Default=Error
-  #     - ProcessingTime=0
-  #     - RabbitMqClient__HostName=rabbitmq1
-  #   networks:
-  #     - emqx-bridge
-  #   deploy:
-  #     replicas: 1
-  #     resources:
-  #       limits:
-  #         cpus: "1"
-  #         memory: "250M"
-  #   depends_on:
-  #     rabbitmq1:
-  #       condition: service_healthy
-
-  rabbitmq-function-1:
-    image: emqx-learning/rabbitmq-function:latest
+  rabbitmq-consumer-1:
+    image: emqx-learning/rabbitmq-consumer:latest
+    # logging:
+    #   driver: none
     build:
       context: .
-      dockerfile: EmqxLearning.RabbitMqFunction/Dockerfile
+      dockerfile: EmqxLearning.RabbitMqConsumer/Dockerfile
     environment:
-      AzureWebJobsStorage: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;"
-      FUNCTIONS_WORKER_RUNTIME: "dotnet"
-      AzureServiceBus__Host: "rabbitmq1"
-      AzureServiceBus__KeyName: "admin"
-      AzureServiceBus__SharedAccessKey: "zaQ@123456!"
-      RabbitMQ: "amqp://admin:zaQ%40123456!@rabbitmq1:5672"
-      DataFolder: "/var/device/data"
-      AzureFunctionsJobHost__logging__LogLevel__Default: "Error"
-      ProcessingTime: 50
+      Logging__LogLevel__Default: Error
+      ProcessingTime: 0
+      RabbitMqClient__HostName: rabbitmq1
+      ConnectionStrings__DeviceDb: "User ID=postgres;Password=zaQ@123456!;Host=timescaledb1;Port=5432;Database=device;Pooling=true"
     networks:
       - emqx-bridge
     deploy:
@@ -106,6 +80,33 @@ services:
     depends_on:
       rabbitmq1:
         condition: service_healthy
+
+  # rabbitmq-function-1:
+  #   image: emqx-learning/rabbitmq-function:latest
+  #   build:
+  #     context: .
+  #     dockerfile: EmqxLearning.RabbitMqFunction/Dockerfile
+  #   environment:
+  #     AzureWebJobsStorage: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://azurite:10000/devstoreaccount1;QueueEndpoint=http://azurite:10001/devstoreaccount1;"
+  #     FUNCTIONS_WORKER_RUNTIME: "dotnet"
+  #     AzureServiceBus__Host: "rabbitmq1"
+  #     AzureServiceBus__KeyName: "admin"
+  #     AzureServiceBus__SharedAccessKey: "zaQ@123456!"
+  #     RabbitMQ: "amqp://admin:zaQ%40123456!@rabbitmq1:5672"
+  #     DataFolder: "/var/device/data"
+  #     AzureFunctionsJobHost__logging__LogLevel__Default: "Error"
+  #     ProcessingTime: 50
+  #   networks:
+  #     - emqx-bridge
+  #   deploy:
+  #     replicas: 1
+  #     resources:
+  #       limits:
+  #         cpus: "1"
+  #         memory: "250M"
+  #   depends_on:
+  #     rabbitmq1:
+  #       condition: service_healthy
 
   # EMQTT bench mark
   # emqtt-bench:
@@ -191,6 +192,49 @@ services:
       resources:
         limits:
           memory: "1024M"
+
+  # TimescaleDB
+  timescaledb1:
+    image: "timescale/timescaledb-ha:pg14-arm64"
+    ports:
+      - "5432:5432"
+    command: postgres -c 'autovacuum_analyze_scale_factor=0.02'
+      -c 'autovacuum_naptime=10s'
+      -c 'autovacuum_max_workers=10'
+      -c 'autovacuum_vacuum_cost_limit=500'
+      -c 'autovacuum_vacuum_scale_factor=0.05'
+      -c 'log_autovacuum_min_duration=1min'
+      -c 'hot_standby=true'
+      -c 'max_connections=5000'
+      -c 'max_prepared_transactions=0'
+      -c 'max_locks_per_transaction=512'
+      -c 'effective_io_concurrency=256'
+      -c 'max_worker_processes=41'
+      -c 'max_parallel_workers=8'
+      -c 'shared_preload_libraries=timescaledb,pg_stat_statements'
+      -c 'tcp_keepalives_idle=900'
+      -c 'tcp_keepalives_interval=100'
+      -c 'temp_file_limit=50GB'
+      -c 'wal_level=hot_standby'
+      -c 'shared_buffers=10240MB'
+      -c 'min_wal_size=512MB'
+      -c 'max_wal_size=1024MB'
+      -c 'default_statistics_target=500'
+      -c 'max_parallel_maintenance_workers=4'
+      -c 'work_mem=10MB';
+    volumes:
+      - ./deployment/timescaledb/scripts:/docker-entrypoint-initdb.d
+    environment:
+      POSTGRES_PASSWORD: "zaQ@123456!"
+      POSTGRES_DB: "device"
+    networks:
+      - emqx-bridge
+    deploy:
+      replicas: 1
+      resources:
+        limits:
+          cpus: 1
+          memory: "5G"
 
   # Azure services
   azurite:
