--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -5,11 +5,21 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DeviceDb": "User ID=postgres;Password=zaQ@123456!;Host=localhost;Port=5432;Database=device;Pooling=true;Maximum Pool Size=20;"
+  },
   "RabbitMqClient": {
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "zaQ@123456!",
-    "RequestedConnectionTimeout": "00:00:30:00"
+    "RequestedConnectionTimeout": "00:00:30:00",
+    "InsertDb": true,
+    "DispatchConsumersAsync": true,
+    "ConsumerDispatchConcurrency": 125
   },
-  "ProcessingTime": 0
+  "RabbitMqChannel": {
+    "PrefetchCount": 128
+  },
+  "ConsumerCount": 2,
+  "ProcessingTime": 100
 }
