--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -206,14 +206,14 @@ services:
     image: "timescale/timescaledb-ha:pg14-arm64"
     ports:
       - "5432:5432"
-    # command: postgres -c 'autovacuum_analyze_scale_factor=0.02'
+    command: postgres -c 'max_connections=5000'
+    #   -c 'autovacuum_analyze_scale_factor=0.02'
     #   -c 'autovacuum_naptime=10s'
     #   -c 'autovacuum_max_workers=10'
     #   -c 'autovacuum_vacuum_cost_limit=500'
     #   -c 'autovacuum_vacuum_scale_factor=0.05'
     #   -c 'log_autovacuum_min_duration=1min'
     #   -c 'hot_standby=true'
-    #   -c 'max_connections=5000'
     #   -c 'max_prepared_transactions=0'
     #   -c 'max_locks_per_transaction=512'
     #   -c 'effective_io_concurrency=256'
