--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -21,5 +21,11 @@
     "PrefetchCount": 128
   },
   "ConsumerCount": 2,
-  "ProcessingTime": 100
+  "ProcessingTime": 100,
+  "BatchSettings": {
+    "Enabled": true,
+    "WorkerThreadCount": 5,
+    "BatchInterval": 500,
+    "BatchSize": 1000
+  }
 }
