--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,24 +67,24 @@ services:
     environment:
       Logging__LogLevel__Default: Warning
       ProcessingTime: 0
-      ConsumerCount: 3
+      ConsumerCount: 2
       InsertDb: true
-      BatchSettings__Enabled: false
-      BatchSettings__BatchInterval: 500
-      BatchSettings__BatchSize: 10000
+      BatchSettings__Enabled: true
+      BatchSettings__BatchInterval: 190
+      BatchSettings__BatchSize: 200
       BatchSettings__WorkerThreadCount: 5
-      ConnectionStrings__DeviceDb: Maximum Pool Size=35;User ID=postgres;Password=zaQ@123456!;Host=timescaledb1;Port=5432;Database=device;Pooling=true;
+      ConnectionStrings__DeviceDb: Maximum Pool Size=10;User ID=postgres;Password=zaQ@123456!;Host=timescaledb1;Port=5432;Database=device;Pooling=true;
       RabbitMqClient__HostName: rabbitmq1
       RabbitMqClient__DispatchConsumersAsync: true
-      RabbitMqClient__ConsumerDispatchConcurrency: 750
-      RabbitMqChannel__PrefetchCount: 1250
+      RabbitMqClient__ConsumerDispatchConcurrency: 5
+      RabbitMqChannel__PrefetchCount: 5000
     networks:
       - emqx-bridge
     deploy:
-      replicas: 1
+      replicas: 2
       resources:
         limits:
-          cpus: "6"
+          cpus: "4"
           memory: "250M"
     depends_on:
       rabbitmq1:
@@ -202,7 +202,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "4"
+          cpus: "6"
           memory: "1024M"
 
   # TimescaleDB
@@ -245,7 +245,7 @@ services:
       replicas: 1
       resources:
         limits:
-          cpus: "4"
+          cpus: "6"
           memory: "2G"
 
   # Azure services
