--- a/EmqxLearning.Shared/EmqxLearning.Shared.csproj
+++ b/EmqxLearning.Shared/EmqxLearning.Shared.csproj
@@ -5,4 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
