Add client session expiry interval

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -7,14 +7,15 @@
   },
   "MqttClientOptions": {
     "TcpServer": "localhost",
-    "CleanSession": true,
+    "CleanSession": false,
+    "SessionExpiryInterval": 600,
     "ReconnectDelaySecs": 5,
     "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
     "QoS": 1
   },
   "ReceiveDelay": 0,
   "ProcessingTime": 0,
-  "ProcessingThreads": 500,
+  "ProcessingThreads": 1,
   "ConcurrencyLimit": 1000,
   "BackgroundProcessing": false,
   "RabbitMqClient": {
