--- a/EmqxLearning.MqttListener/EmqxLearning.MqttListener.csproj
+++ b/EmqxLearning.MqttListener/EmqxLearning.MqttListener.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DeviceId.Linux" Version="6.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
     <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.3.3.952" />
