--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
     environment:
       Logging__LogLevel__Default: Warning
       MqttClientOptions__TcpServer: node1.emqx.io
-      MqttClientOptions__CleanSession: true
+      MqttClientOptions__CleanSession: false
+      MqttClientOptions__SessionExpiryInterval: 200
       MqttClientOptions__ReconnectDelaySecs: 5
       MqttClientOptions__Topic: $$share/ahi/projectId/+/devices/+/telemetry
       MqttClientOptions__Qos: 1
       ReceiveDelay: 0
-      ProcessingTime: 0
-      ConcurrencyLimit: 100
+      ProcessingTime: 50
+      ConcurrencyLimit: 400
       ProcessingThreads: 20
       BackgroundProcessing: true
       RabbitMqClient__HostName: rabbitmq1
