--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       MqttClientOptions__Topic: $$share/ahi/projectId/+/devices/+/telemetry
       MqttClientOptions__Qos: 1
       ReceiveDelay: 0
-      ProcessingTime: 50
+      ProcessingTime: 0
       ConcurrencyLimit: 400
       ProcessingThreads: 20
       BackgroundProcessing: true
@@ -29,8 +29,8 @@ services:
       replicas: 3
       resources:
         limits:
-          cpus: "0.5"
-          memory: "50M"
+          cpus: "1"
+          memory: "250M"
     depends_on:
       emqx1:
         condition: service_healthy
@@ -79,7 +79,7 @@ services:
       RabbitMqClient__HostName: rabbitmq1
       RabbitMqClient__DispatchConsumersAsync: true
       RabbitMqClient__ConsumerDispatchConcurrency: 5
-      RabbitMqChannel__PrefetchCount: 5000
+      RabbitMqChannel__PrefetchCount: 2500
     networks:
       - emqx-bridge
     deploy:
@@ -87,7 +87,7 @@ services:
       resources:
         limits:
           cpus: "4"
-          memory: "250M"
+          memory: "500M"
     depends_on:
       rabbitmq1:
         condition: service_healthy
@@ -205,7 +205,7 @@ services:
       resources:
         limits:
           cpus: "6"
-          memory: "1024M"
+          memory: "2G"
 
   # TimescaleDB
   timescaledb1:
