Add error handling and retry in MQTT listener

--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -9,7 +9,7 @@
     "TcpServer": "localhost",
     "CleanSession": false,
     "SessionExpiryInterval": 600,
-    "ReconnectDelaySecs": 5,
+    "ReconnectDelaySecs": 3,
     "Topic": "$share/ahi/projectId/+/devices/+/telemetry",
     "QoS": 1
   },
@@ -23,5 +23,14 @@
     "UserName": "admin",
     "Password": "zaQ@123456!",
     "RequestedConnectionTimeout": "00:00:30:00"
+  },
+  "ResilienceSettings": {
+    "ConnectionErrors": {
+      "DelaySecs": 5
+    },
+    "TransientErrors": {
+      "RetryAttempts": 3,
+      "DelaySecs": 3
+    }
   }
 }
