--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -27,5 +27,14 @@
     "WorkerThreadCount": 5,
     "BatchInterval": 500,
     "BatchSize": 1000
+  },
+  "ResilienceSettings": {
+    "ConnectionErrors": {
+      "DelaySecs": 5
+    },
+    "TransientErrors": {
+      "RetryAttempts": 3,
+      "DelaySecs": 3
+    }
   }
 }
