Check in code retry

--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -15,7 +15,9 @@
     "RequestedConnectionTimeout": "00:00:30:00",
     "InsertDb": true,
     "DispatchConsumersAsync": true,
-    "ConsumerDispatchConcurrency": 125
+    "ConsumerDispatchConcurrency": 125,
+    "AutomaticRecoveryEnabled": true,
+    "NetworkRecoveryInterval": "00:00:10:00"
   },
   "RabbitMqChannel": {
     "PrefetchCount": 128
@@ -29,6 +31,9 @@
     "BatchSize": 1000
   },
   "ResilienceSettings": {
+    "InitialConnectionErrors": {
+      "DelaySecs": 5
+    },
     "ConnectionErrors": {
       "DelaySecs": 5
     },
