--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -22,7 +22,10 @@
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "zaQ@123456!",
-    "RequestedConnectionTimeout": "00:00:30:00"
+    "RequestedConnectionTimeout": "00:00:30",
+    "AutomaticRecoveryEnabled": true,
+    "TopologyRecoveryEnabled": true,
+    "NetworkRecoveryInterval": "00:00:15"
   },
   "ResilienceSettings": {
     "ConnectionErrors": {
