--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -12,12 +12,13 @@
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "zaQ@123456!",
-    "RequestedConnectionTimeout": "00:00:30:00",
+    "RequestedConnectionTimeout": "00:00:30",
     "InsertDb": true,
     "DispatchConsumersAsync": true,
     "ConsumerDispatchConcurrency": 125,
     "AutomaticRecoveryEnabled": true,
-    "NetworkRecoveryInterval": "00:00:10:00"
+    "TopologyRecoveryEnabled": true,
+    "NetworkRecoveryInterval": "00:00:15"
   },
   "RabbitMqChannel": {
     "PrefetchCount": 128
