Check in code circuit breaker MQTT listener

--- a/EmqxLearning.RabbitMqConsumer/appsettings.json
+++ b/EmqxLearning.RabbitMqConsumer/appsettings.json
@@ -12,16 +12,20 @@
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "zaQ@123456!",
-    "RequestedConnectionTimeout": "00:00:30",
     "InsertDb": true,
     "DispatchConsumersAsync": true,
     "ConsumerDispatchConcurrency": 125,
     "AutomaticRecoveryEnabled": true,
     "TopologyRecoveryEnabled": true,
-    "NetworkRecoveryInterval": "00:00:15"
+    "RequestedConnectionTimeout": "00:00:30",
+    "NetworkRecoveryInterval": "00:00:15",
+    "SocketReadTimeout": "00:00:15",
+    "SocketWriteTimeout": "00:00:15",
+    "RequestedHeartbeat": "00:00:15"
   },
   "RabbitMqChannel": {
-    "PrefetchCount": 128
+    "PrefetchCount": 128,
+    "ContinuationTimeout": "00:00:15"
   },
   "ConsumerCount": 2,
   "ProcessingTime": 100,
@@ -36,7 +40,7 @@
       "DelaySecs": 5
     },
     "ConnectionErrors": {
-      "DelaySecs": 5
+      "DelaySecs": 15
     },
     "TransientErrors": {
       "RetryAttempts": 3,
