--- a/EmqxLearning.MqttListener/appsettings.json
+++ b/EmqxLearning.MqttListener/appsettings.json
@@ -22,14 +22,18 @@
     "HostName": "localhost",
     "UserName": "admin",
     "Password": "zaQ@123456!",
-    "RequestedConnectionTimeout": "00:00:30",
     "AutomaticRecoveryEnabled": true,
     "TopologyRecoveryEnabled": true,
-    "NetworkRecoveryInterval": "00:00:15"
+    "RequestedConnectionTimeout": "00:00:30",
+    "NetworkRecoveryInterval": "00:00:15",
+    "SocketReadTimeout": "00:00:15",
+    "SocketWriteTimeout": "00:00:15",
+    "RequestedHeartbeat": "00:00:15"
   },
   "ResilienceSettings": {
+    "CircuitBreakerReconnectAfter": 15,
     "ConnectionErrors": {
-      "DelaySecs": 5
+      "DelaySecs": 15
     },
     "TransientErrors": {
       "RetryAttempts": 3,
